--- a/package.json
+++ b/package.json
@@ -6,27 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
-    "@tanstack/react-query": "^5.45.1",
     "antd": "^5.18.2",
     "axios": "^1.7.2",
+    "jest": "^29.7.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.1",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5"
   }
 }
